--- a/index.html
+++ b/index.html
@@ -34,11 +34,27 @@ Group of Architects
     </p>
     <button class="banner_button btn_primary">Explore More</button>
    </div>
-    <img class="banner_img" src="images/banner.png" alt="" class="banner_img">
+    <img class="banner_img" src="images/banner.png" alt="" >
 </div>
     </header>
     <main>
-
+ <!--* our features sections  -->
+ <section class="our_features">
+    <div class="features_img">
+        <img src="images/team1.png" alt="">
+        <img src="images/team2.png" alt="">
+        <img src="images/team3.png" alt="">
+        <img src="images/team4.png" alt="">
+    
+    </div>
+    <div class="features_details">
+        <h3 class="features_title">Quick list <b>of Our</b> <span>Features</span></h3>
+         <p class="features_description">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+         </p>
+         <div class="features_button btn_primary">Explore More</div>
+    </div>
+ </section>
     </main>
     <footer>
 
